--- a/src/Locales/ru/translation.json
+++ b/src/Locales/ru/translation.json
@@ -326,36 +326,64 @@
 			]
 		},
 		"more": {
-			"name": "Дополнительный опыт работы",
+			"title": "Дополнительный опыт работы",
 			"subtitle": "Дополнительный опыт и достижения",
 			"data": [
 				{
 					"company": "Тату студия «сТАТУс»",
 					"position": "Системный администратор",
-					"city": "г. Юрга",
+					"location": "г. Юрга",
 					"period": ["2020/09/01", "2022/04/01"],
-					"details": "Обеспечивал техническое обслуживание и поддержку более пяти единиц компьютерной техники."
+					"projects": [
+						{
+							"name": "",
+							"description": "Обеспечивал техническое обслуживание и поддержку более пяти единиц компьютерной техники.",
+							"responsilities": [],
+							"technologies": [""]
+						}
+					]
 				},
 				{
 					"position": "Системный администратор",
 					"company": "Такси «Фунтик/Casper»",
-					"city": "г. Юрга",
+					"location": "г. Юрга",
 					"period": ["2020/11/01", "2022/04/01"],
-					"details": "Осуществлял техническое обслуживание и поддержку двух единиц компьютерной техники."
+					"projects": [
+						{
+							"name": "",
+							"description": "Осуществлял техническое обслуживание и поддержку двух единиц компьютерной техники.",
+							"responsilities": [],
+							"technologies": [""]
+						}
+					]
 				},
 				{
 					"position": "Владелец бизнеса (магазин автозапчастей / франшиза Yandex.Taxi)",
 					"company": "Индивидуальный предприниматель",
-					"city": "г. Юрга",
+					"location": "г. Юрга",
 					"period": ["2016/08/26", "2019/05/15"],
-					"details": "Создал и развил бизнес с нуля до успешной реализации. Получил опыт в области бухгалтерского учета, управления бизнесом, а также изучил ключевые аспекты налогового и трудового законодательства РФ."
+					"projects": [
+						{
+							"name": "",
+							"description": "Создал и развил бизнес с нуля до успешной реализации. Получил опыт в области бухгалтерского учета, управления бизнесом, а также изучил ключевые аспекты налогового и трудового законодательства РФ.",
+							"responsilities": [],
+							"technologies": [""]
+						}
+					]
 				},
 				{
 					"position": "Менеджер отдела продаж",
 					"company": "Goodline (ООО \"Е-Лайт-Телеком\")",
-					"city": "г. Юрга",
+					"location": "г. Юрга",
 					"period": ["2015/05/01", "2015/08/01"],
-					"details": "Получил опыт продаж продуктов сетевого провайдера, включая интернет-услуги, кабельное ТВ и ТВ-приставки. Прошел обучение техникам холодных продаж."
+					"projects": [
+						{
+							"name": "",
+							"description": "Получил опыт продаж продуктов сетевого провайдера, включая интернет-услуги, кабельное ТВ и ТВ-приставки. Прошел обучение техникам холодных продаж.",
+							"responsilities": [],
+							"technologies": [""]
+						}
+					]
 				}
 			]
 		}
